added campus and community

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
       <!-- Top Bar -->
       <div class="flex justify-between items-center">
         <!-- Logo -->
+          <img src="/images//UPenn-logo.svg" alt="penn logo"/>
         <div class="flex items-center">
           
         </div>
@@ -158,6 +159,26 @@
     </div>
   </div>
   <!-- other one image -->
-   
+    <section id="middle">
+      <div class="h-screen relative bg-[url('https://www.upenn.edu/sites/default/files/styles/crop_2x1/public/2025-01/penn-center-innovation.jpg?h=92c5d8ae&itok=3O1cAYdA')] bg-no-repeat bg-cover object-bottom">
+          <div class="absolute border-0 border-blue-300 bg-indigo-950 max-w-md max-h-auto top-12 right-0 left-16 px-2 py-2">
+              <div class=" border-1 border-gray-600 px-4 py-6 w-full text-center space-y-4">
+                  <h1 class="text-sm font-semibold text-white">
+                      Campus & Community
+                  </h1>
+                  <h2 class="group text-xl font-medium max-w-5xl text-white group-hover:underline">Penn Center for Innovation celebrates 10 years</h2>
+                  <div class=" border-2 border-gray-500 w-5 mx-auto"></div>
+                  <p class="max-w-xs text-medium font-medium text-white mx-auto text-center">
+                      The University’s nexus for technology transfer supports researchers in their innovative efforts, from CAR T to mRNA advancements that have dramatically reshaped the world.
+                  </p>
+                  <button class="group rounded-full px-8 py-4 border-2 border-gray-600 mx-auto text-center text-sm text-white uppercase mt-8 group-hover:bg-white group-hover:text-red-500">
+                      Learn More
+                  </button>
+              </div>
+          </div>
+      </div>
+  </section>
+  <!-- upcomming events -->
+
 </body>
 </html>
