--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       <!-- Top Bar -->
       <div class="flex justify-between items-center">
         <!-- Logo -->
-          <img src="/images//UPenn-logo.svg" alt="penn logo"/>
+          <img src="./images/UPenn-logo.svg" alt="penn logo"/>
         <div class="flex items-center">
           
         </div>
@@ -60,7 +60,7 @@
   <!-- Hero Section -->
   <div class="relative h-screen">
     <!-- Background Image -->
-    <img src="/images/gate1.jpg" alt="Birds flying" class="absolute w-full h-full object-cover">
+    <img src="./images/gate1.jpg" alt="Birds flying" class="absolute w-full h-full object-cover">
     
     <!-- Content Overlay -->
     <div class="absolute inset-0 bg-gradient-to-t from-black/70 via-transparent to-transparent">
@@ -87,7 +87,7 @@
       <!-- Main Feature -->
       <div class="relative border-b-2 border-gray-300">
         <img 
-          src="/images/gate2.jpg" 
+          src="./images/gate2.jpg" 
           alt="Main news"
           class="w-full h-[400px] object-cover"
         />
@@ -102,7 +102,7 @@
         <!-- News Item 1 -->
         <div class="relative border-b-2 border-gray-300">
           <img 
-            src="/images/gate3.jpg" 
+            src="./images/gate3.jpg" 
             alt="News 1"
             class="w-full h-[180px] object-cover"
           />
@@ -115,7 +115,7 @@
         <!-- News Item 2 -->
         <div class="relative border-b-2 border-gray-300">
           <img 
-            src="/images/gate.jpg" 
+            src="./images/gate.jpg" 
             alt="News 2"
             class="w-full h-[180px] object-cover"
           />
@@ -128,7 +128,7 @@
         <!-- News Item 3 -->
         <div class="relative border-b-2 border-gray-300">
           <img 
-            src="/images/gate4.jpg" 
+            src="./images/gate4.jpg" 
             alt="News 3"
             class="w-full h-[180px] object-cover"
           />
@@ -141,7 +141,7 @@
         <!-- News Item 4 -->
         <div class="relative border-b-2 border-gray-300">
           <img 
-            src="/images/gate5.jpg" 
+            src="./images/gate5.jpg" 
             alt="News 4"
             class="w-full h-[180px] object-cover"
           />
@@ -179,6 +179,58 @@
       </div>
   </section>
   <!-- upcomming events -->
+  <section class="pt-10 p-3">
+    <h1 class="text-3xl font-serif text-blue-900 mb-8  pb-2">Upcoming Events</h1>
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <!-- First Event -->
+        <div class="relative">
+             <div class="flex flex-row">
+                <div class="absolute top-4 left-4 bg-red-700 text-white px-2 py-1 text-xs">
+                  FEB
+                </div>
+                <div class="absolute top-12 left-4 bg-white text-black text-xl font-bold px-2">
+                  18
+                </div>
+             </div>
+            <img src="./images/gate7.jpg" alt="Building" class="w-full h-64 object-cover  mb-4"/>
+            <div class="uppercase text-xs font-semibold text-gray-600 mb-2">TALKS</div>
+            <h3 class="text-xl font-serif text-blue-900 mb-2">Managing Presentation Anxiety</h3>
+            <p class="text-sm text-gray-600">
+                Communication Within the Curriculum Associate Director Sue Weber offers tips and tricks to control anxiety during public speaking. A Penn graduate student ID is required.
+            </p>
+        </div>
+
+        <!-- Second Event -->
+        <div>
+            <div class="flex items-center mb-4">
+                <div class="bg-red-700 text-white px-2 py-1 text-xs mr-2">FEB</div>
+                <div class="text-xl font-bold">19</div>
+            </div>
+            <div class="uppercase text-xs font-semibold text-gray-600 mb-2">SPECIAL EVENTS</div>
+            <h3 class="text-xl font-serif text-blue-900 mb-2">Historic Pennsylvania Hospital Tour</h3>
+            <p class="text-sm text-gray-600">
+                Holman Biotech Commons hosts a public tour of Pennsylvania Hospital, the nation's first hospital. Attendees will tour the Great Court, Historic Library, and Surgical Amphitheatre. Registration is required.
+            </p>
+        </div>
+
+        <!-- Third Event -->
+        <div>
+            <div class="flex items-center mb-4">
+                <div class="bg-red-700 text-white px-2 py-1 text-xs mr-2">FEB</div>
+                <div class="text-xl font-bold">21</div>
+            </div>
+            <div class="uppercase text-xs font-semibold text-gray-600 mb-2">TALKS</div>
+            <h3 class="text-xl font-serif text-blue-900 mb-2">Jesse Rothstein</h3>
+            <p class="text-sm text-gray-600">
+                Jesse Rothstein, a professor of public policy and economics at the University of California, Berkeley, hosts a seminar about the role of social safety net programs in college student success.
+            </p>
+        </div>
+    </div>
+
+    <div class="mt-8">
+        <a href="#" class="text-sm text-blue-900 uppercase font-semibold">MORE EVENTS VIA PENN TODAY</a>
+    </div>
+  </section>
 
 </body>
 </html>
