--- a/src/index.html
+++ b/src/index.html
@@ -233,8 +233,9 @@
   <section id="Priorities" class=" bg-[url('https://www.upenn.edu/themes/custom/penn_global/assets/img/blue-pattern-bg.png')] bg-cover bg-no-repeat ">
     <div class="h-[500px] py-24 md:w-full md:mx-auto bg-center mb-72"
       style="background-image: url(../images/blue-pattern-bg.png);">
-      <h2 class="text-5xl font-semibold text-center text-white">Penn Priorities</h2>
-      <p class="mt-2 max-w-xl mx-auto text-white text-center">
+      <h2 class="text-5xl font-semibold text-center text-white pb-5">Penn Priorities</h2>
+      <div class="w-10 h-1 bg-[#94A0B8] mx-auto mb-12 "></div>
+      <p class="mt-1 max-w-xl mx-auto text-white text-center">
         A look at a few of our big picture priorities that improve Penn as we create knowledge to benefit the world.
       </p>
   
@@ -365,5 +366,110 @@
     </div>
   </div>
 </section>
+
+  <!-- section for Opportunity-->
+<section id="opportunity" class="bg-[#011F5B] py-12">
+    <div class="max-w-7xl mx-auto flex flex-col items-center space-y-6 px-4 pb-20 text-center">
+        <h1 class="text-3xl font-serif text-white">Equal Opportunity and Nondiscrimination at Penn</h1>
+        <p class="text-lg font-sans text-white  leading-relaxed">
+            The University of Pennsylvania values diversity and seeks talented students, faculty and staff with diverse backgrounds, experiences, and perspectives. The University of Pennsylvania does not discriminate on the basis of race, color, sex, sexual orientation, gender identity, religion, creed, national or ethnic origin, citizenship status, age, disability, veteran status or any other legally protected class status in the administration of its admissions, financial aid, educational or athletic programs, or other University-administered programs or in its employment practices. Questions or complaints regarding this policy should be directed to the Executive Director of the Office of Affirmative Action and Equal Opportunity Programs, Franklin Building, 3451 Walnut Street, Suite 421, Philadelphia, PA 19104-6106; or (215) 898-6993 (Voice).
+        </p>
+        <div class="mt-6">
+            <div class="p-3 px-6 border border-white rounded-full text-center text-white hover:bg-white hover:text-blue-900 transition">
+                Nondiscrimination Statement
+            </div>
+        </div>
+    </div>
+</section>
+<!-- footer session -->
+
+<footer class="bg-[#2F4673] bg-[url('https://www.upenn.edu/themes/custom/penn_global/assets/img//footer-16.png')] bg-cover">
+  <div class="max-w-7xl mx-auto px-8 py-14">
+    <!-- Main Footer Content -->
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-x-24 gap-y-12 mb-16 text-center md:text-left">
+      <!-- Left Column -->
+      <div class="flex flex-col items-center md:items-start">
+        <img src="https://www.upenn.edu/themes/custom/penn_starter/assets/img/UPenn-logo.svg" alt="University of Pennsylvania" class="h-16 w-auto"/>
+        <h1 class="text-3xl font-bold text-white mb-6">PENN</h1>
+        <div class="mb-8">
+          <p class="text-white">Philadelphia, PA 19104</p>
+          <p class="text-white">Telephone: <span class="text-[#82AFD3]">(215) 898-5000</span></p>
+        </div>
+        <div class="space-y-4">
+          <p class="text-white font-semibold">CONTACT US</p>
+          <div class="space-y-2">
+            <p class="text-white hover:underline cursor-pointer">MAPS</p>
+            <p class="text-white hover:underline cursor-pointer">PARKING</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Navigate Column -->
+      <div class="flex flex-col items-center md:items-start">
+        <p class="text-white font-semibold mb-6">Navigate</p>
+        <div class="space-y-3">
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">ALUMNI</p>
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">ATHLETICS</p>
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">DIVERSITY</p>
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">HEALTH CARE</p>
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">LIBRARIES</p>
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">ONLINE LEARNING</p>
+          <p class="text-white hover:underline cursor-pointer font-semibold uppercase">PENN GLOBAL</p>
+        </div>
+      </div>
+
+      <!-- Heritage Column -->
+      <div class="flex flex-col items-center md:items-start">
+        <p class="text-white font-semibold mb-6">Penn's Heritage</p>
+        <p class="text-white text-sm leading-relaxed mb-8">
+          As America's first university, Penn has a history that dates back to 1740 
+          and shares many ties with the colonial city of Philadelphia and the birth 
+          of our nation.
+        </p>
+        <button class="w-48 border border-white text-white py-3 px-8 rounded-full hover:bg-white hover:text-[#2F4673] transition-colors uppercase text-sm font-semibold">
+          Our History
+        </button>
+      </div>
+    </div>
+
+    <!-- Bottom Links -->
+    <div class="text-white py-6 relative">
+      <div class="container mx-auto px-4 flex flex-col md:flex-row justify-between items-center text-center md:text-left">
+        <!-- Back to top button -->
+        <div class="flex items-center space-x-2 mb-6 ">
+          <button class="border border-white w-16 h-16 cursor-pointer hover:bg-gray-300 hover:text-[#2F4673] transition-colors flex items-center justify-center">
+            <span class="text-white text-lg">↑</span>
+          </button>
+          <span class="uppercase text-sm font-semibold">Back to top</span>
+        </div>
+
+     <!-- Footer links -->
+<div class="text-sm space-y-2">
+  <div class="flex flex-col md:flex-row justify-center md:justify-start space-y-2 md:space-y-0 md:space-x-4">
+    <a href="#" class="hover:underline font-semibold uppercase">Disclaimer</a>
+    <span class="hidden md:inline">|</span>
+    <a href="#" class="hover:underline font-semibold uppercase">Emergency Services</a>
+    <span class="hidden md:inline">|</span>
+    <a href="#" class="hover:underline font-semibold uppercase">Nondiscrimination</a>
+    <span class="hidden md:inline">|</span>
+    <a href="#" class="hover:underline font-semibold uppercase">Privacy Policy</a>
+  </div>
+  <div class="flex flex-col md:flex-row justify-center md:justify-start space-y-2 md:space-y-0 md:space-x-4">
+    <a href="#" class="hover:underline font-semibold uppercase">Report Accessibility Issues and Get Help</a>
+    <span class="hidden md:inline">|</span>
+    <a href="#" class="hover:underline font-semibold uppercase">Report Copyright Infringement</a>
+  </div>
+</div>
+
+      </div>
+    </div>
+
+    <div class="mt-8 text-center md:text-left">
+      <!-- <a href="https://www.upenn.edu" class="text-white text-sm hover:underline">
+        https://www.upenn.edu
+      </a> -->
+    </div>
+  </div>
+</footer>
 </body>
 </html>
