--- a/src/index.html
+++ b/src/index.html
@@ -383,16 +383,15 @@
 </section>
 <!-- footer session -->
 
-<footer class="bg-[#2F4673] bg-[url('https://www.upenn.edu/themes/custom/penn_global/assets/img//footer-16.png')] bg-cover">
+<footer class="bg-[#133c7e] bg-[url('https://www.upenn.edu/themes/custom/penn_global/assets/img//footer-16.png')] bg-cover">
   <div class="max-w-7xl mx-auto px-8 py-14">
     <!-- Main Footer Content -->
     <div class="grid grid-cols-1 md:grid-cols-3 gap-x-24 gap-y-12 mb-16 text-center md:text-left">
       <!-- Left Column -->
       <div class="flex flex-col items-center md:items-start">
         <img src="https://www.upenn.edu/themes/custom/penn_starter/assets/img/UPenn-logo.svg" alt="University of Pennsylvania" class="h-16 w-auto"/>
-        <h1 class="text-3xl font-bold text-white mb-6">PENN</h1>
         <div class="mb-8">
-          <p class="text-white">Philadelphia, PA 19104</p>
+          <p class="text-white pt-5">Philadelphia, PA 19104</p>
           <p class="text-white">Telephone: <span class="text-[#82AFD3]">(215) 898-5000</span></p>
         </div>
         <div class="space-y-4">
